--- a/index.html
+++ b/index.html
@@ -844,12 +844,13 @@ img.imgpurple {
 }
 
 .boxbutton {
+  margin-top:5px:
     /* color: red !important; */
     left: -11px;
     background:transparent !important;
     position: relative;
     display: flex;
-    top: 277px;
+    top: 274px;
     justify-content: center;
   
 }
@@ -1022,8 +1023,8 @@ p.para21 {
 }
 .imgbestseller {
     position: relative;
-    height: 28px;
-    left: 150px;
+    height: 30px;
+    left: 154px;
     top: 230px;
     width: 54%;
 }
@@ -1980,6 +1981,7 @@ p.para28 {
   </body>
 
 </html>
+
 
 
 
