--- a/index.html
+++ b/index.html
@@ -858,11 +858,12 @@ img.imgpurple {
     color: black !important;
 }
 button.bestsellerbotton {
+  align-items: center;
     font-size: 14px;
     /* width: 75%; */
     display: flex;
     justify-content: center;
-    height: 36px;
+    height: 38px;
     color: white;
     border: white;
     background-color: transparent !important;
@@ -1023,7 +1024,7 @@ p.para21 {
 .imgbestseller {
     position: relative;
     height: 30px;
-    left: 165px;
+    left: 166px;
     top: 230px;
     width: 54%;
 }
@@ -1980,6 +1981,7 @@ p.para28 {
   </body>
 
 </html>
+
 
 
 
